# lobo-line

./: .gitignore  README.md  app.py  config.py  crawl_urls.py  main.py  pyproject.toml  rag.py  requirements.txt  select_relevant_urls.py  sitemapper.py
backend/: config.py  main.py  rag.py  removebadsublinks.py  requirements.txt  sitemapper.py
frontend/: package-lock.json
frontend/public/: manifest.json
frontend/src/: App.tsx
ignore/: langchain_example.py  requirements.txt
react-app/: package-lock.json  package.json
react-app/src/: App.tsx  index.tsx
requirements/: instructions.md
scripts/: build.sh  removebadsublinks.py
